Update CKEditor version
Upgraded CKEditor from version 4.20.0 to 4.22.1 and changed gem dependency to ensure minimum version 5.1.3.

4.22 is the last Open Source version available. For now, we should hide
the fake warning about security. It seems the warning is shown to move
users to v5 and buy the license.

--- a/app/assets/stylesheets/lcms/engine/application.bootstrap.scss
+++ b/app/assets/stylesheets/lcms/engine/application.bootstrap.scss
@@ -8,3 +8,5 @@ $fa-font-path: '/lcms-engine-assets/fonts';
 @import '@fortawesome/fontawesome-free/scss/solid';
 @import '@fortawesome/fontawesome-free/scss/regular';
 @import '@fortawesome/fontawesome-free/scss/v4-shims';
+
+@import 'ckeditor';
